# espeak-ng

./: Makefile.am  configure.ac  lien  note
android/: .project
src/: Makefile.am  espeak-ng.c  hello.h  ssml-fuzzer.c  util.c  util.h
tests/: .gdb_history  Makefile.am  build-fuzzvoice-corpus.py  correct_output_coverage  coverage_espeak.output  crash-0f095495796fe74cd96f6dce21db901368f0a83d  crash-174d98b99cb8da02c8606e0db8d712de304c0ba2  crash-3e0592f62a20549351d0ae4c57bd6f2f8de7f31b  crash-439dda494d34ac038b50e80a3b0e2d6d8db0b825  crash-4a3d9374a48005ae35c2ebed30197ec75f5af70c  crash-4b6d43a495c4ac942ea1f059d182eea2413a39f8  crash-51cbe941e49d2776deec445eda918387d82fb4ff  crash-768166e9de2c3a71b4cbb4c71f349227e4a92577  crash-859b40b89371eb3dc4c6eea7658afec796f180de  crash-8f29c1cc300bc9dd4a71e9321246d24e3da420eb  crash-95ab33798a02267cc63371641c29de8d0812d507  crash-9c78e8d6a7d99c3d2828280b93bdef5fbe2384aa  crash-c38794670e5490b4393f8624f0bdc0d171e22851  crash-d662444fe588223f1c933bdf9e1263514f9053ac  crash-d96045b034a3c94c5e9a4d403899e921acddbb4b  crash-e9e12f545da37a41751e4e5d60466f52a54dccfa  fuzz_compileDictionnary.c  my_fuzzer  my_fuzzer.c  oom-f89b4dcacb2555648f6904ec4a086c46cb3603b8  outputcoverage  slow-unit-00b7e95798edf3d85bd940f7fda817a2636c0fbd  slow-unit-00e1a89e017ad40f9f1eaff275eaed1b93d6e155  slow-unit-02aa8d4d40f2a925dd008f7a96783bc4bb4fae70  slow-unit-02ec2347d029d0b4ad743a8db9254e8d13501599  slow-unit-02f65a44e985f915fd2c026874fef7d53cf6c51f  slow-unit-038ed7100c93938486965ccaea137331dd234a90  slow-unit-04210233343980afe5d1cab091ee99b02cb9b173  (+508 more)
(+2 files in other folders)
